--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -28,10 +28,12 @@ body {
 .accordion__panel {
   position: relative;
   isolation: isolate;
-  flex-basis: 5rem;
+  flex-basis: 32rem;
   overflow: hidden;
   padding: 1rem;
   transition: flex-basis 500ms;
+  transition: all 500ms linear;
+  opacity: 0.5;
 }
 .accordion__img {
   position: absolute;
@@ -42,6 +44,32 @@ body {
   object-fit: cover;
   z-index: -1;
 }
+.accordion__trigger {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  background-color: transparent;
+  outline: none;
+  border: none;
+  position: absolute;
+  bottom: 165px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.accordion__trigger > span {
+  font-size: 32px;
+  font-weight: 400;
+}
+.accordion__icon {
+  display: inline-flex;
+  width: 50px;
+  height: 50px;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+}
 
 .accordion__content > p {
   transform: translateY(4rem);
@@ -50,6 +78,7 @@ body {
 
 .accordion__panel:has([aria-expanded=true]) {
   flex-basis: 100%;
+  opacity: 1;
 }
 
 /*# sourceMappingURL=styles.css.map */
